--- a/photo.html
+++ b/photo.html
@@ -207,7 +207,26 @@ $(this).scrollTop(450);
         }
 
         window.onload = function() {
+            shuffle(photos);
             loadPhoto();
+        }
+
+        function shuffle(array) {
+            let currentIndex = array.length,  randomIndex;
+
+            // While there remain elements to shuffle.
+            while (currentIndex != 0) {
+
+                // Pick a remaining element.
+                randomIndex = Math.floor(Math.random() * currentIndex);
+                currentIndex--;
+
+                // And swap it with the current element.
+                [array[currentIndex], array[randomIndex]] = [
+                array[randomIndex], array[currentIndex]];
+            }
+
+            return array;
         }
     </script>
 </body>
