--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@ https://templatemo.com/tm-552-video-catalog
                                 <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Full Event Montage</h3>
                             </div>
                         </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 tm-catalog-item">
+                            <div class="position-relative tm-thumbnail-container">
+                                <img src="img/Misc.jpg" alt="Image" class="img-fluid tm-catalog-item-img">    
+                                <a href="video-page-4.html" class="position-absolute tm-img-overlay" target="_blank">
+                                    <i class="fas fa-play tm-overlay-icon"></i>
+                                </a>
+                            </div>    
+                            <div class="p-4 tm-bg-gray tm-catalog-item-description">
+                                <h3 class="tm-text-primary mb-3 tm-catalog-item-title">Miscellaneous</h3>
+                            </div>
+                        </div>
                     </div>
 
                 </main>
